--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Project</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Project</a></li>
           </ul>
         </nav>
 
@@ -236,7 +236,7 @@
                   <p>A visioner, and techproduct design guy.</p>
                 </div>
               </a>
-              <img class="user__img" src="img/person-1.png" alt="">
+              <img class="user__img img_1" src="img/person-1.png" alt="">
             </div>
 
             <div class="founder-item-icon">
@@ -244,7 +244,7 @@
                 <h4>Doe Jhon</h4>
                 <p>A tech guy, expert in MERN Stack and Server Side</p>
               </div>
-              <img class="sub_user__img" src="img/person-2.png" alt="">
+              <img class="sub_user__img img_2" src="img/person-2.png" alt="">
               <a class="sub_user__link user__link_1" href="#">
               </a>
             </div>
@@ -256,7 +256,7 @@
                   <p>A visioner, and techproduct design guy.</p>
                 </div>
               </a>
-              <img class="user__img" src="img/person-3.png" alt="">
+              <img class="user__img img_3" src="img/person-3.png" alt="">
             </div>
 
             <div class="founder-item-icon">
@@ -264,7 +264,7 @@
                 <h4>Kekey</h4>
                 <p>Lead Researcher, loves data and human-centered design</p>
               </div>
-              <img class="sub_user__img" src="img/person-4.png" alt="">
+              <img class="sub_user__img img_4" src="img/person-4.png" alt="">
               <a class="sub_user__link user__link_1" href="#">
               </a>
             </div>
@@ -348,43 +348,46 @@
   <footer class="footer">
     <div class="container ">
       <div class="footer__inner">
-        <a class="footer__icon">
+        <div class="footer__info">
           <h4 class="">SakaAgency</h4>
           <p>Copyright © 2021 SakaAgency
             All Right Reserver</p>
-          <avatar class="avatar__icon">
-            <img src="img/instagram.png" alt="avatar">
-            <img src="img/youtube.png" alt="avatar">
-            <img src="img/ball.png" alt="avatar">
-          </avatar>
-        </a>
+          <div class="footer-social ">
+            <a href="#">
+              <img class="social__img" src="img/instagram.png" alt="">
+            </a>
+            <a href="#">
+              <img class="social__img" src="img/youtube.png" alt="">
+            </a>
+            <a href="#">
+              <img class="social__img" src="img/ball.png" alt="">
+            </a>
+          </div>
+        </div>
+
         <nav class="navbar nav_1">
-          <a href="#" class="footer__text text_h4">
-            <h4>Company</h4>
-          </a>
+          <h4 class="footer__text text_h4">Company</h4>
           <ul class="footer__list list_1">
-            <li class="footer__item"><a class="footer__link">About Us</a></li>
-            <li class="footer__item"><a class="footer__link">Project</a></li>
-            <li class="footer__item"><a class="footer__link">Pricing</a></li>
-            <li class="footer__item"><a class="footer__link">Career</a></li>
-            <li class="footer__item"><a class="footer__link">Testimonial</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">About Us</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Project</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Pricing</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Career</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Testimonial</a></li>
           </ul>
         </nav>
 
         <nav class="navbar nav_1">
-          <a href="#" class="footer__text text_h4">
-            <h4>Support</h4>
-          </a>
+          <h4 class="footer__text text_h4">Company</h4>
           <ul class="footer__list list_2">
-            <li class="footer__item"><a class="footer__link">FAQ</a></li>
-            <li class="footer__item"><a class="footer__link">Privacy Policy</a></li>
-            <li class="footer__item"><a class="footer__link">Term and Conditions</a></li>
-            <li class="footer__item"><a class="footer__link">halo@sakaagency.studio</a></li>
-            <li class="footer__item"><a class="footer__link">022-123-4567</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">FAQ</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Privacy Policy</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Term and Conditions</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">halo@sakaagency.studio</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">022-123-4567</a></li>
           </ul>
         </nav>
 
-        <div class="footer_btn">
+        <div class="footer_input">
           <h4>Get In Touch</h4>
           <input class="input" type="text" id="first_email" placeholder="Your email address">
           <img src="img/send.png" alt="">
